# dependencies

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
dependencies/: __init__.py  dependencies.py
tests/: test_apply_parameter.py  test_class.py  test_decorator.py  test_dependant.py  test_depends.py  test_functor.py  test_generator.py  test_types.py
